<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/habitListFragment">

    <fragment
        android:id="@+id/habitListFragment"
        android:name="com.example.dailyworktracker.ui.habitlist.HabitListFragment"
        android:label="@string/habit_list_title"
        tools:layout="@layout/fragment_habit_list">

        <action
            android:id="@+id/action_habitList_to_addEditHabit"
            app:destination="@id/addEditHabitFragment" />

        <action
            android:id="@+id/action_habitList_to_allHabits"
            app:destination="@id/allHabitsFragment" />

        <action
            android:id="@+id/action_habitList_to_habitDetail"
            app:destination="@id/habitDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/habitDetailFragment"
        android:name="com.example.dailyworktracker.ui.habitdetail.HabitDetailFragment"
        android:label="@string/habit_detail_title"
        tools:layout="@layout/fragment_habit_detail">

        <argument
            android:name="habitId"
            app:argType="long" />

    </fragment>

    <fragment
        android:id="@+id/allHabitsFragment"
        android:name="com.example.dailyworktracker.ui.allhabits.AllHabitsFragment"
        android:label="@string/all_habits_title"
        tools:layout="@layout/fragment_all_habits">

        <action
            android:id="@+id/action_allHabits_to_addEditHabit"
            app:destination="@id/addEditHabitFragment" />

        <action
            android:id="@+id/action_allHabits_to_habitDetail"
            app:destination="@id/habitDetailFragment" />

    </fragment>

    <dialog
        android:id="@+id/addEditHabitFragment"
        android:name="com.example.dailyworktracker.ui.addedithabit.AddEditHabitFragment"
        android:label="@string/add_habit_title"
        tools:layout="@layout/bottomsheet_add_edit_habit">

        <!-- -1 means "create a new habit"; any other value edits that habit. -->
        <argument
            android:name="habitId"
            android:defaultValue="-1L"
            app:argType="long" />

    </dialog>

</navigation>
